--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./resources/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"
           integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
@@ -17,12 +17,19 @@
 </head>
 <body>
   <div class="container-fluid header">
-    <div class="row">
-      <h1>trackster</h1>
-      <input type="text">
-      <button type="button" class="btn btn-default">
-      </button>
+    <div class="container">
+      <div class="row align-items-center justify-content-between">
+        <div class="col-md-1">
+          <h1>trackster</h1>
+        </div>
+        <div class="col-md-3">
+          <input type="search" placeholder="Search">
+          <button type="button" class="btn btn-default"><i class="fas fa-search fa-lg"></i></button>
+        </div>
+      </div>
     </div>
   </div>
+
+
 </body>
 </html>
