--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="col-md-1">
           <h1>trackster</h1>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-5">
           <input type="search" placeholder="Search">
-          <button type="button" class="btn btn-default"><i class="fas fa-search fa-lg"></i></button>
+          <button type="button" class="btn btn-default btn-lg search-button"><i class="fas fa-search fa-lg"></i></button>
         </div>
       </div>
     </div>
