--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           <h1>trackster</h1>
         </div>
         <div class="col-md-5">
-          <input type="search" placeholder="Search">
-          <button type="button" class="btn btn-default btn-lg search-button"><i class="fas fa-search fa-lg"></i></button>
+          <input type="search" placeholder="Search" id="search-box">
+          <button type="button" class="btn btn-default btn-lg search-button" id="search"><i class="fas fa-search fa-lg"></i></button>
         </div>
       </div>
     </div>
