created a mock result row to style it

--- a/index.html
+++ b/index.html
@@ -29,6 +29,21 @@
       </div>
     </div>
   </div>
+  <div class="container-fluid">
+    <div class="row align-items-center justify-content-around list-results">
+      <div class="col-md-5 offset-md-1"><h5>Song</h5></div>
+      <div class="col-md-2"><h5>Artist</h5></div>
+      <div class="col-md-2"><h5>Album Art</h5></div>
+      <div class="col-md-2"><h5>Listeners</h5></div>
+    </div>
+  </div>
+  <div class="row align-items-center" id="results">
+    <div class="col-md-1 play-button"><a href="https://youtu.be/oDrUZOZnFNE"><i class="far fa-play-circle fa-2x"></i></a></div>
+    <div class="col-md-5"><span>faiytale in the Supermarket</span></div>
+    <div class="col-md-2"><span>The Raincoats</span></div>
+    <div class="col-md-2"><span>The Raincoats</span></div>
+    <div class="col-md-2"><span>100,101</span></div>
+  </div>
 
 
 </body>
