--- a/index.html
+++ b/index.html
@@ -37,12 +37,16 @@
       <div class="col-md-2"><h5>Listeners</h5></div>
     </div>
   </div>
-  <div class="row align-items-center" id="results">
-    <div class="col-md-1 play-button"><a href="https://youtu.be/oDrUZOZnFNE"><i class="far fa-play-circle fa-2x"></i></a></div>
-    <div class="col-md-5"><span>faiytale in the Supermarket</span></div>
-    <div class="col-md-2"><span>The Raincoats</span></div>
-    <div class="col-md-2"><span>The Raincoats</span></div>
-    <div class="col-md-2"><span>100,101</span></div>
+  <div class="row">
+    <div class="container-fluid" id="results">
+      <div class="row align-items-center results">
+        <div class="col-md-1 play-button"><a href="https://youtu.be/oDrUZOZnFNE"><i class="far fa-play-circle fa-2x"></i></a></div>
+        <div class="col-md-5"><span>faiytale in the Supermarket</span></div>
+        <div class="col-md-2"><span>The Raincoats</span></div>
+        <div class="col-md-2"><span>The Raincoats</span></div>
+        <div class="col-md-2"><span>100,101</span></div>
+      </div>
+    </div>
   </div>
 
 
